--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <body>
 
+
   <!-- Début NavBar -->
 
   <nav id="nav" class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
@@ -39,7 +40,7 @@
             <a class="nav-link" href="#cover">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Jeux</a>
+            <a class="nav-link" href="#games">Jeux</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#footer">Contact</a>
@@ -50,6 +51,8 @@
   </nav>
 
   <!-- Fin NavBar -->
+
+
 
   <!-- Début du contenu de la page -->
 
@@ -69,190 +72,186 @@
         </div>
         <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
           de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
-        <p class="animated bounceInRight" style="animation-delay: 1.5s"><a href="./login.html"><button class="button"><span>
-              Inscrivez vous !</span></button></a></p>
+        <p class="animated bounceInRight" style="animation-delay: 1.5s"><a href="./login.html"><button
+              class="button"><span>
+                Inscrivez vous !</span></button></a></p>
       </div>
     </div>
   </div>
 
-  <div class="games">
+  <div id="games">
+    <div class="container-fluid">
+      <div class="px-lg-5">
 
-  </div>
+        <!-- For demo purpose -->
+        <div class="row py-5">
+          <div class="col-lg-12 mx-auto">
+            <div class="text-white p-5 shadow-sm rounded banner">
+              <h1 class="display-4">Nos Jeux</h1>
 
-
-
-  <div class="container-fluid">
-    <div class="px-lg-5">
-
-      <!-- For demo purpose -->
-      <div class="row py-5">
-        <div class="col-lg-12 mx-auto">
-          <div class="text-white p-5 shadow-sm rounded banner">
-            <h1 class="display-4">Nos Jeux</h1>
-
+            </div>
           </div>
         </div>
+        <!-- End -->
+
+        <!-- End -->
+
+        <div class="row">
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img src="img/chessLogo.jpg" alt="" class="img     card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">Red paint cup</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
+                  </p>
+                  <div class="badge badge-danger px-3 rounded-pill font-weight-normal">New</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/cody-davis-253928-unsplash_vfcdcl.jpg"
+                alt="" class="img card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">Blorange</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">PNG</span>
+                  </p>
+                  <div class="badge badge-primary px-3 rounded-pill font-weight-normal">Trend</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg"
+                alt="" class="img     card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">And She Realized</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
+                  </p>
+                  <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg"
+                alt="" class="img card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">DOSE Juice</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPEG</span>
+                  </p>
+                  <div class="badge badge-success px-3 rounded-pill font-weight-normal">Hot</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294926/cody-davis-253925-unsplash_hsetv7.jpg"
+                alt="" class="img     card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">Pineapple</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">PNG</span>
+                  </p>
+                  <div class="badge badge-primary px-3 rounded-pill font-weight-normal">New</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/tim-foster-734470-unsplash_xqde00.jpg"
+                alt="" class="img card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">Yellow banana</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
+                  </p>
+                  <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg"
+                alt="" class="img card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
+                  </p>
+                  <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm"><img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg"
+                alt="" class="img     card-img-top">
+              <div class="p-4">
+                <h5> <a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                  <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPEG</span>
+                  </p>
+                  <div class="badge badge-success px-3 rounded-pill font-weight-normal">Hot</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+        </div>
+        <div class="py-5 text-right"><a href="#" class="btn btn-dark px-5 py-3 text-uppercase">Show me more</a></div>
       </div>
-      <!-- End -->
-
-      <!-- End -->
-
-      <div class="row">
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img src="img/chessLogo.jpg" alt="" class="img     card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">Red paint cup</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span></p>
-                <div class="badge badge-danger px-3 rounded-pill font-weight-normal">New</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/cody-davis-253928-unsplash_vfcdcl.jpg"
-              alt="" class="img card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">Blorange</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">PNG</span></p>
-                <div class="badge badge-primary px-3 rounded-pill font-weight-normal">Trend</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg"
-              alt="" class="img     card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">And She Realized</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span></p>
-                <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg"
-              alt="" class="img card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">DOSE Juice</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPEG</span></p>
-                <div class="badge badge-success px-3 rounded-pill font-weight-normal">Hot</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294926/cody-davis-253925-unsplash_hsetv7.jpg"
-              alt="" class="img     card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">Pineapple</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">PNG</span></p>
-                <div class="badge badge-primary px-3 rounded-pill font-weight-normal">New</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/tim-foster-734470-unsplash_xqde00.jpg"
-              alt="" class="img card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">Yellow banana</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span></p>
-                <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg"
-              alt="" class="img card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span></p>
-                <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm"><img
-              src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg"
-              alt="" class="img     card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
-              <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPEG</span></p>
-                <div class="badge badge-success px-3 rounded-pill font-weight-normal">Hot</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-      </div>
-      <div class="py-5 text-right"><a href="#" class="btn btn-dark px-5 py-3 text-uppercase">Show me more</a></div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
   <!-- Fin du contenu de la page -->
+
+
+  
 
   <!-- Début Footer -->
 
